--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -8,12 +8,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1144</width>
-    <height>653</height>
+    <width>1171</width>
+    <height>724</height>
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>FileDialog</string>
+   <string>Feicim FileDialog</string>
   </property>
   <property name="modal" >
    <bool>false</bool>
@@ -21,8 +21,8 @@
   <widget class="QPushButton" name="closeButton" >
    <property name="geometry" >
     <rect>
-     <x>990</x>
-     <y>580</y>
+     <x>1060</x>
+     <y>680</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -36,16 +36,16 @@
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>831</width>
-     <height>591</height>
+     <width>841</width>
+     <height>651</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="saveButton" >
    <property name="geometry" >
     <rect>
-     <x>870</x>
-     <y>580</y>
+     <x>940</x>
+     <y>680</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -57,9 +57,9 @@
   <widget class="QGroupBox" name="groupBox" >
    <property name="geometry" >
     <rect>
-     <x>860</x>
-     <y>20</y>
-     <width>281</width>
+     <x>870</x>
+     <y>320</y>
+     <width>301</width>
      <height>181</height>
     </rect>
    </property>
@@ -71,7 +71,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>261</width>
+      <width>271</width>
       <height>131</height>
      </rect>
     </property>
@@ -116,10 +116,10 @@
   <widget class="QGroupBox" name="groupBox_2" >
    <property name="geometry" >
     <rect>
-     <x>860</x>
-     <y>230</y>
-     <width>281</width>
-     <height>231</height>
+     <x>870</x>
+     <y>510</y>
+     <width>301</width>
+     <height>161</height>
     </rect>
    </property>
    <property name="title" >
@@ -129,8 +129,8 @@
     <property name="geometry" >
      <rect>
       <x>10</x>
-      <y>40</y>
-      <width>261</width>
+      <y>20</y>
+      <width>271</width>
       <height>131</height>
      </rect>
     </property>
@@ -166,6 +166,111 @@
       <widget class="QLabel" name="label_3" >
        <property name="text" >
         <string>Files size</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_3" >
+   <property name="geometry" >
+    <rect>
+     <x>870</x>
+     <y>20</y>
+     <width>301</width>
+     <height>291</height>
+    </rect>
+   </property>
+   <property name="title" >
+    <string/>
+   </property>
+   <widget class="QWidget" name="gridLayout_3" >
+    <property name="geometry" >
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>281</width>
+      <height>276</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" >
+     <item row="0" column="1" >
+      <widget class="QLineEdit" name="configname" />
+     </item>
+     <item row="1" column="1" >
+      <widget class="QLineEdit" name="configversion" />
+     </item>
+     <item row="2" column="1" >
+      <widget class="QLineEdit" name="simulation" />
+     </item>
+     <item row="3" column="1" >
+      <widget class="QLineEdit" name="processing" />
+     </item>
+     <item row="4" column="1" >
+      <widget class="QLineEdit" name="eventtype" />
+     </item>
+     <item row="5" column="1" >
+      <widget class="QLineEdit" name="filetype" />
+     </item>
+     <item row="6" column="1" >
+      <widget class="QLineEdit" name="production" />
+     </item>
+     <item row="7" column="1" >
+      <widget class="QLineEdit" name="progrnameandversion" />
+     </item>
+     <item row="0" column="0" >
+      <widget class="QLabel" name="label_7" >
+       <property name="text" >
+        <string>Configuration Name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" >
+      <widget class="QLabel" name="label_8" >
+       <property name="text" >
+        <string>Configuration Version</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" >
+      <widget class="QLabel" name="label_9" >
+       <property name="text" >
+        <string>Simulation Conditions</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0" >
+      <widget class="QLabel" name="label_10" >
+       <property name="text" >
+        <string>Processing pass</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0" >
+      <widget class="QLabel" name="label_11" >
+       <property name="text" >
+        <string>Event Type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0" >
+      <widget class="QLabel" name="label_12" >
+       <property name="text" >
+        <string>File Type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0" >
+      <widget class="QLabel" name="label_13" >
+       <property name="text" >
+        <string>Production</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0" >
+      <widget class="QLabel" name="label_14" >
+       <property name="text" >
+        <string>Program Name and version</string>
        </property>
       </widget>
      </item>
