1.Ganga request has been implemented. 2. bug fix 3. I added waiti functionality in to the tree. 4. I check the simulation condition and processing pass.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@12897 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/InfoDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/InfoDialog.ui
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Node Informations</string>
+   <string>Feicim Info dialog</string>
   </property>
   <widget class="QPushButton" name="pushButton" >
    <property name="geometry" >
