1. GUI bug fix. 2. rigth click, double click in the tree node has implemented 3. Added rownumber to FileDialog Window. 4. Chenged the view. I removed the Number of events from Program Name and version tree level. 5.Oracle database connection changed, We are using local configuration file. 6.) I added more functionality to the BKK client file list method. You can limit the queries result.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@13196 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/MainWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/MainWidget.ui
@@ -11,15 +11,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>444</width>
+    <width>585</width>
     <height>841</height>
    </rect>
   </property>
   <property name="cursor" >
-   <cursorShape>WaitCursor</cursorShape>
+   <cursorShape>ArrowCursor</cursorShape>
   </property>
   <property name="windowTitle" >
-   <string>Feicim Bookkeeping browser</string>
+   <string>Feicim - LHCb Bookkeeping browser</string>
   </property>
   <widget class="QWidget" name="centralwidget" >
    <widget class="QTreeWidget" name="tree" >
@@ -31,15 +31,20 @@
     </property>
     <property name="geometry" >
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>401</width>
+      <x>0</x>
+      <y>0</y>
+      <width>581</width>
       <height>631</height>
      </rect>
     </property>
     <column>
      <property name="text" >
-      <string>Path</string>
+      <string>Jaj</string>
+     </property>
+    </column>
+    <column>
+     <property name="text" >
+      <string>New Column</string>
      </property>
     </column>
    </widget>
@@ -49,7 +54,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>444</width>
+     <width>585</width>
      <height>25</height>
     </rect>
    </property>
