--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/InfoDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/InfoDialog.ui
@@ -8,39 +8,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>620</width>
-    <height>310</height>
+    <width>664</width>
+    <height>365</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Feicim Info dialog</string>
   </property>
-  <widget class="QPushButton" name="pushButton" >
-   <property name="windowModality" >
-    <enum>Qt::NonModal</enum>
-   </property>
-   <property name="geometry" >
-    <rect>
-     <x>490</x>
-     <y>260</y>
-     <width>111</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Close</string>
-   </property>
-  </widget>
-  <widget class="QTableView" name="tableView" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>601</width>
-     <height>221</height>
-    </rect>
-   </property>
-  </widget>
+  <layout class="QHBoxLayout" >
+   <item>
+    <widget class="QTableView" name="tableView" />
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox" >
+     <property name="title" >
+      <string/>
+     </property>
+     <layout class="QGridLayout" >
+      <item row="0" column="0" >
+       <widget class="QPushButton" name="pushButton" >
+        <property name="windowModality" >
+         <enum>Qt::NonModal</enum>
+        </property>
+        <property name="text" >
+         <string>Close</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
