--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -31,28 +31,60 @@
       <item row="0" column="0" >
        <layout class="QGridLayout" >
         <item row="0" column="1" >
-         <widget class="QLineEdit" name="configname" />
+         <widget class="QLineEdit" name="configname" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="1" column="1" >
-         <widget class="QLineEdit" name="configversion" />
+         <widget class="QLineEdit" name="configversion" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="2" column="1" >
-         <widget class="QLineEdit" name="simulation" />
+         <widget class="QLineEdit" name="simulation" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="3" column="1" >
-         <widget class="QLineEdit" name="processing" />
+         <widget class="QLineEdit" name="processing" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="4" column="1" >
-         <widget class="QLineEdit" name="eventtype" />
+         <widget class="QLineEdit" name="eventtype" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="5" column="1" >
-         <widget class="QLineEdit" name="filetype" />
+         <widget class="QLineEdit" name="filetype" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="6" column="1" >
-         <widget class="QLineEdit" name="production" />
+         <widget class="QLineEdit" name="production" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="7" column="1" >
-         <widget class="QLineEdit" name="progrnameandversion" />
+         <widget class="QLineEdit" name="progrnameandversion" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0" >
          <widget class="QLabel" name="label_7" >
@@ -142,10 +174,18 @@
          </widget>
         </item>
         <item row="0" column="1" >
-         <widget class="QLineEdit" name="lineEdit" />
+         <widget class="QLineEdit" name="lineEdit" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="1" column="1" >
-         <widget class="QLineEdit" name="lineEdit_2" />
+         <widget class="QLineEdit" name="lineEdit_2" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="2" column="0" >
          <widget class="QLabel" name="label_5" >
@@ -155,7 +195,11 @@
          </widget>
         </item>
         <item row="2" column="1" >
-         <widget class="QLineEdit" name="lineEdit_5" />
+         <widget class="QLineEdit" name="lineEdit_5" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -182,10 +226,18 @@
          </layout>
         </item>
         <item row="0" column="1" >
-         <widget class="QLineEdit" name="lineEdit_3" />
+         <widget class="QLineEdit" name="lineEdit_3" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="1" column="1" >
-         <widget class="QLineEdit" name="lineEdit_4" />
+         <widget class="QLineEdit" name="lineEdit_4" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0" >
          <widget class="QLabel" name="label_6" >
@@ -195,7 +247,11 @@
          </widget>
         </item>
         <item row="2" column="1" >
-         <widget class="QLineEdit" name="lineEdit_6" />
+         <widget class="QLineEdit" name="lineEdit_6" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="2" column="0" >
          <widget class="QLabel" name="label_3" >
