1. bug fix 2. FileDilaog selection behivor changed. 3. new tree implemented (production lookup) 4. advanced save implemented. (the users can save catalog)
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@14877 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>584</width>
-    <height>775</height>
+    <width>534</width>
+    <height>736</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -91,6 +91,13 @@
        <widget class="QRadioButton" name="radioButton_2" >
         <property name="text" >
          <string>Event type/SimCond/ProcessingPass/Production/FileType/Program/Files</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QRadioButton" name="productionRadioButton" >
+        <property name="text" >
+         <string>Production lookup</string>
         </property>
        </widget>
       </item>
