--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -22,7 +22,7 @@
    <item rowspan="3" row="0" column="0" >
     <widget class="QTableView" name="tableView" />
    </item>
-   <item row="0" column="1" colspan="2" >
+   <item row="0" column="1" colspan="3" >
     <widget class="QGroupBox" name="groupBox_3" >
      <property name="title" >
       <string/>
@@ -147,7 +147,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="1" colspan="2" >
+   <item row="1" column="1" colspan="3" >
     <widget class="QGroupBox" name="groupBox" >
      <property name="title" >
       <string>Statistics</string>
@@ -206,7 +206,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="1" colspan="2" >
+   <item row="2" column="1" colspan="3" >
     <widget class="QGroupBox" name="groupBox_2" >
      <property name="title" >
       <string>Selected</string>
@@ -266,13 +266,20 @@
     </widget>
    </item>
    <item row="3" column="1" >
+    <widget class="QPushButton" name="advancedSave" >
+     <property name="text" >
+      <string>Advanced Save..</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2" >
     <widget class="QPushButton" name="saveButton" >
      <property name="text" >
       <string>Save Files...</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="2" >
+   <item row="3" column="3" >
     <widget class="QPushButton" name="closeButton" >
      <property name="text" >
       <string>Close</string>
