bug fix I split the production lookup to production lookup and runlookup I changed the filediaolg behivor. I limited the row size. The users can specific how many files they want to see.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@15552 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>534</width>
+    <width>456</width>
     <height>736</height>
    </rect>
   </property>
@@ -29,9 +29,6 @@
    </item>
    <item row="1" column="0" colspan="2" >
     <widget class="QTreeWidget" name="tree" >
-     <property name="windowModality" >
-      <enum>Qt::WindowModal</enum>
-     </property>
      <property name="enabled" >
       <bool>true</bool>
      </property>
@@ -39,7 +36,7 @@
       <cursorShape>ArrowCursor</cursorShape>
      </property>
      <property name="styleSheet" >
-      <string/>
+      <string notr="true" />
      </property>
      <property name="lineWidth" >
       <number>1</number>
@@ -98,6 +95,13 @@
        <widget class="QRadioButton" name="productionRadioButton" >
         <property name="text" >
          <string>Production lookup</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" >
+       <widget class="QRadioButton" name="runLookup" >
+        <property name="text" >
+         <string>Run lookup</string>
         </property>
        </widget>
       </item>
