--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -265,24 +265,31 @@
      </layout>
     </widget>
    </item>
-   <item row="3" column="1" >
+   <item row="4" column="1" >
     <widget class="QPushButton" name="advancedSave" >
      <property name="text" >
       <string>Advanced Save..</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="2" >
+   <item row="4" column="2" >
     <widget class="QPushButton" name="saveButton" >
      <property name="text" >
       <string>Save Files...</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="3" >
+   <item row="4" column="3" >
     <widget class="QPushButton" name="closeButton" >
      <property name="text" >
       <string>Close</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" >
+    <widget class="QPushButton" name="nextButton" >
+     <property name="text" >
+      <string>Next Page</string>
      </property>
     </widget>
    </item>
