--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/MainWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/MainWidget.ui
@@ -25,9 +25,6 @@
    <layout class="QVBoxLayout" >
     <item>
      <widget class="QTreeWidget" name="tree" >
-      <property name="windowModality" >
-       <enum>Qt::WindowModal</enum>
-      </property>
       <property name="enabled" >
        <bool>true</bool>
       </property>
@@ -60,12 +57,24 @@
     </property>
     <addaction name="actionExit" />
    </widget>
+   <widget class="QMenu" name="menuOptions" >
+    <property name="title" >
+     <string>Options</string>
+    </property>
+    <addaction name="actionFile_dialog_paging_size" />
+   </widget>
    <addaction name="menuFile" />
+   <addaction name="menuOptions" />
   </widget>
   <widget class="QStatusBar" name="statusbar" />
   <action name="actionExit" >
    <property name="text" >
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionFile_dialog_paging_size" >
+   <property name="text" >
+    <string>File dialog page size</string>
    </property>
   </action>
  </widget>
