--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/ProductionLookup.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/ProductionLookup.ui
@@ -5,24 +5,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>193</width>
-    <height>227</height>
+    <width>270</width>
+    <height>230</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" >
-   <item row="0" column="0" colspan="2" >
+   <item row="0" column="0" colspan="3" >
     <widget class="QLineEdit" name="lineEdit" />
    </item>
-   <item row="1" column="0" colspan="2" >
+   <item row="1" column="0" colspan="3" >
     <widget class="QListView" name="listView" />
    </item>
    <item row="2" column="0" >
-    <widget class="QPushButton" name="pushButton_2" >
+    <widget class="QPushButton" name="allButton" >
      <property name="text" >
-      <string>Cancel</string>
+      <string>All</string>
      </property>
     </widget>
    </item>
@@ -30,6 +30,13 @@
     <widget class="QPushButton" name="pushButton" >
      <property name="text" >
       <string>OK</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2" >
+    <widget class="QPushButton" name="pushButton_2" >
+     <property name="text" >
+      <string>Cancel</string>
      </property>
     </widget>
    </item>
