--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
@@ -12,22 +12,58 @@
   <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QGridLayout" name="gridLayout_2" >
    <item row="0" column="0" >
-    <widget class="QCheckBox" name="standardQuery" >
-     <property name="text" >
-      <string>Standard</string>
+    <widget class="QGroupBox" name="groupBox" >
+     <property name="title" >
+      <string/>
      </property>
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" >
+       <widget class="QCheckBox" name="standardQuery" >
+        <property name="text" >
+         <string>Standard</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QCheckBox" name="advancedQuery" >
+        <property name="text" >
+         <string>Advanced Queries</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" >
+       <widget class="QLineEdit" name="pageSize" >
+        <property name="text" >
+         <string>ALL</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label" >
+        <property name="text" >
+         <string>Page Size:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2" >
+       <spacer name="horizontalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="0" column="1" >
-    <widget class="QCheckBox" name="advancedQuery" >
-     <property name="text" >
-      <string>Advanced Queries</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2" >
+   <item row="1" column="0" >
     <widget class="QTreeWidget" name="tree" >
      <property name="enabled" >
       <bool>true</bool>
@@ -71,7 +107,7 @@
      </column>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2" >
+   <item row="2" column="0" >
     <widget class="QGroupBox" name="selection" >
      <property name="title" >
       <string>Queries</string>
